@@ -28,8 +28,27 @@
 #include "slighttp/http-handler.h"
 
 #define HTTP_WS_PROTOCOL "wifiswitch"
-
-/*
+/**
+ *    The handshake from the client looks as follows:
+ *
+ *       GET /chat HTTP/1.1
+ *       Host: server.example.com
+ *       Upgrade: websocket
+ *       Connection: Upgrade
+ *       Sec-WebSocket-Key: dGhlIHNhbXBsZSBub25jZQ==
+ *       Origin: http://example.com
+ *       Sec-WebSocket-Protocol: chat, superchat
+ *       Sec-WebSocket-Version: 13
+ *
+ *  The handshake from the server looks as follows:
+ *
+ *       HTTP/1.1 101 Switching Protocols
+ *       Upgrade: websocket
+ *       Connection: Upgrade
+ *       Sec-WebSocket-Accept: s3pPLMBiTxaQ9kYGzzhZRbK+xOo=
+ *       Sec-WebSocket-Protocol: chat
+ */
+/**
  *     0                   1                   2                   3
  *     0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9 0 1
  *    +-+-+-+-+-------+-+-------------+-------------------------------+
